components/Footer/Footer.module.css
.container {
  margin: 0;
}

.relative {
  position: relative;
  padding-top: 2rem;
  padding: 0 0 0.5rem 0.5rem;
}

.absolute {
  position: absolute;
  bottom: 0;
  margin: 0 0 0.5rem 0.5rem;
}

@media only screen and (max-width: 480px) {
  .absolute,
  .relative {
    text-align: center;
    left: 0;
    right: 0;
    margin: 0;
  }
}

